# nyayai

./: .env.example  .gitignore  Makefile  Phase Explanation.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
api/middleware/: timing.py
api/routes/: debug.py
api/schemas/: errors.py  upload.py
config/: constants.py  log_config.py  settings.py
corpus/: embeddings.py  ingest.py  parser.py  pdf_utils.py
corpus/parsers/: base.py  bns.py  bnss.py  ipc.py
docs/: Folder_structure.md  PHASE_1.md  PHASE_2.md  Phase Explanation.md  architecture.md  corpus.md  model.md  roadmap.md
frontend/: package.json
frontend/src/: HighlightOverlay.jsx  PdfCanvas.jsx
model/: pipeline.py  postprocess.py  predict.py  preprocess.py  schemas.py
ocr/: extractor.py  native_extractor.py  pipeline.py  router.py  surya_extractor.py  tokens.py
rules/: citation_checker.py  entity_checker.py
scripts/: benchmark.py  download_models.py  ingest_corpus.py  smoke_test.py
tests/: test_ocr.py  test_parser.py
utils/: bbox.py  pdf.py  text.py
workers/: celery_app.py  queues.py
