[project]
name = "nyayai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0+cu124-cp310-cp310-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu124/torchvision-0.19.0+cu124-cp310-cp310-linux_x86_64.whl" }